force-app/main/default/objects/Case/fields/CDC_CAC_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CDC_CAC_Service_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CDC_CAC_CASE_TYPE</valueSetName>
    </valueSet>
</CustomField>