force-app/main/default/objects/Case/fields/CDC_CAC_Classification_Topic_Detail__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Classification_Topic_Detail__c</fullName>
    <label>Classification Topic Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CDC_CAC_Classification_Topic__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CDC_CAC_CLASSIFICATION_TOPIC_DETAIL</valueSetName>
    </valueSet>
</CustomField>