force-app/main/default/objects/Case/fields/CDC_CAC_Customer_Consent__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Customer_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Consent</label>
    <type>Checkbox</type>
</CustomField>