force-app/main/default/objects/Case/fields/CDC_CAC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>