force-app/main/default/objects/Case/fields/CDC_CAC_Mileage_Unit__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Mileage_Unit__c</fullName>
    <label>Mileage Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kilometers</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>