force-app/main/default/objects/Case/validationRules/Mileage_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_Unit</fullName>
    <active>false</active>
    <description>Mileage Unit is required if Mileage is not null</description>
    <errorConditionFormula>CDC_CAC_Mileage__c &gt;=0 &amp;&amp; ISPICKVAL( CDC_CAC_Mileage_Unit__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>CDC_CAC_Mileage_Unit__c</errorDisplayField>
    <errorMessage>Please select a Mileage Unit</errorMessage>
</ValidationRule>