force-app/main/default/objects/Case/listViews/CDC_CAC_All_Cases.listView-meta.xml
<ListView>
    <fullName>CDC_CAC_All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CDC_CAC_Service_Type__c</columns>
    <columns>CDC_CAC_Case_Type__c</columns>
    <columns>CDC_CAC_Classification_Type__c</columns>
    <columns>CDC_CAC_Classification_Topic__c</columns>
    <columns>CDC_CAC_Classification_Topic_Detail__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>