force-app/main/default/objects/Case/listViews/CDC_CAC_CS_Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CDC_CAC_CS_Case_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CDC CAC Maastricht CS Case Queue</label>
    <queue>CDC_CAC_Maastricht_CS_Case_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>