force-app/main/default/objects/Case/listViews/CDC_CAC_Default_Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CDC_CAC_Default_Case_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CDC_CAC_Service_Type__c</columns>
    <columns>CDC_CAC_Case_Type__c</columns>
    <columns>CDC_CAC_Classification_Type__c</columns>
    <columns>CDC_CAC_Classification_Topic__c</columns>
    <columns>CDC_CAC_Classification_Topic_Detail__c</columns>
    <filterScope>Queue</filterScope>
    <label>CDC CAC Default Case Queue</label>
    <queue>CDC_CAC_Default_Case_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>